# PolytechLabs

./: .gitignore  Arkanoid.sln  CppLab_1.sln  CppLab_2.sln  Cpp_Lab3.sln  Readme.md
Arkanoid/: Arkanoid.vcxproj  Arkanoid.vcxproj.filters  Ball.cpp  Ball.h  Bonus.cpp  Bonus.h  Brick.cpp  Brick.h  Collider.cpp  Collider.h  Game.h  GameInstance.cpp  GameInstance.h  GameObject.h  Global.h  MovingObject.cpp  MovingObject.h  Platform.cpp  Platform.h  main.cpp
CppLab_1/: CppLab_1.cpp  CppLab_1.vcxproj  CppLab_1.vcxproj.filters
CppLab_2/: CppLab_2.cpp  CppLab_2.vcxproj  CppLab_2.vcxproj.filters  input.txt  input_students.txt  output.txt  output_students.txt  output_teacher.txt
Cpp_Lab3/: Cpp_Lab3.vcxproj  Cpp_Lab3.vcxproj.filters  board.cpp  board.h  bonus_test.cpp  bonus_test.h  config.h  game.cpp  game.h  gems.cpp  gems.h  main.cpp
Cpp_Lab3/x64/Debug/: Cpp_Lab3.exe.recipe  board.obj.enc  vc143.idb
Cpp_Lab3/x64/Debug/Cpp_Lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cpp_Lab3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/Subject/: Subject.cpp  Subject.hpp
src/Wrapper/: Wrapper.cpp  Wrapper.hpp
